[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openocd-esp32"
dynamic = ["version"]
description = "OpenOCD for Espressif chips (ESP32, ESP32-S2, ESP32-S3, ESP32-C3, etc.)"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "GPL-2.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Espressif Systems"},
]
keywords = ["openocd", "esp32", "espressif", "debugger", "jtag", "embedded"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Embedded Systems",
]

[project.urls]
Homepage = "https://github.com/espressif/openocd-esp32"
Documentation = "https://docs.espressif.com/projects/openocd-esp32"
Repository = "https://github.com/espressif/openocd-esp32"
Issues = "https://github.com/espressif/openocd-esp32/issues"

[project.scripts]
openocd-esp32 = "openocd_esp32:main"

[tool.setuptools]
packages = ["openocd_esp32"]
include-package-data = true
license-files = ["COPYING"]

[tool.setuptools.dynamic]
version = {attr = "openocd_esp32._version.__version__"}

[tool.setuptools.package-data]
openocd_esp32 = ["bin/**/*", "share/**/*"]
